# test_task_full_stack_developer_web_python

./: .gitignore  README.md  pyproject.toml
alembic/: env.py
alembic/versions/: 2024_11_13_1607-d02215a271ce_initial.py
src/: deps.py  initial_data.py  main.py  pages.py
src/core/: config.py  database.py  security.py
src/crud/: files.py  users.py
src/models/: __init__.py  files.py  users.py
src/schemas/: files.py  users.py
src/static/: style.css
src/static/js/: context-menu.js  file-input.js  tooltip.js
src/templates/: base.html  files.html  home.html  login.html  signup.html  users.html
